# static-file-server

./: Cargo.toml  index.html  readme.md
src/: main.rs
