[package]
name = "static-files-server"
version = "0.0.1"
edition = "2021"
description = "A simple static files server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
